fix(ui5-multi-cbx): remove horizontal scrollbar

--- a/packages/main/src/themes/Tokenizer.css
+++ b/packages/main/src/themes/Tokenizer.css
@@ -37,6 +37,7 @@
 	display: flex;
 	flex-wrap: nowrap;
 	align-items: center;
+	justify-content: flex-end;
 }
 
 .ui5-tokenizer--content.ui5-tokenizer-nmore--content {
@@ -49,10 +50,6 @@
 	cursor: pointer;
 	white-space: nowrap;
 	font-size: var(--sapFontMediumSize);
-}
-
-:host([expanded]) .ui5-tokenizer--content {
-	overflow: auto;
 }
 
 ::slotted(ui5-token) {
